--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ if(d.date.hijri.month.number===9) ramadhanData.push(d);
 }
 renderTable();
 prepareToday();
-setInterval(changeTablePage,600000);
+setInterval(changeTablePage,180000); // 3 menit
 }
 
 function renderTable(){
